# FerriLab

./: Cargo.toml  README.MD  README.TXT
examples/: data.txt  example.rs
src/: aprox.rs  fit.rs  lib.rs  macros.rs  objects.rs  plot.rs  reader.rs  tables.rs
tests/: integration_tests.rs
