[package]
name = "ferrilab"
version = "0.1.0"
description = ""
edition = "2021"
authors = ["Óscar Castro", "Gustavo Gancedo"]
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.20.2", features = ["auto-initialize"]}
thiserror = "1.0.56"
