[package]
name = "ferrilab"
version = "0.1.1"
description = "Package intended for working with laboratory measures."
edition = "2021"
authors = ["Óscar Castro", "Gustavo Gancedo"]
license = "MIT"
repository = "https://github.com/asaltanubes/FerriLab"
readme = "README.MD"
keywords = ["laboratory", "physics", "analysis", "graphics"]

[dependencies]
pyo3 = {version = "0.20.2", features = ["auto-initialize"]}
thiserror = "1.0.56"
